@@ -3,19 +3,15 @@ package com.codeborne.selenide.appium.conditions;
 import com.codeborne.selenide.CheckResult;
 import com.codeborne.selenide.Driver;
 import com.codeborne.selenide.collections.ExactTexts;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.WebElement;
 
-import javax.annotation.CheckReturnValue;
-import javax.annotation.Nonnull;
-import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.List;
 import java.util.Objects;
 
 import static com.codeborne.selenide.CheckResult.Verdict.ACCEPT;
 import static com.codeborne.selenide.CheckResult.rejected;
-import static java.util.stream.Collectors.toList;
 
-@ParametersAreNonnullByDefault
 public class AppiumAttributeValues extends ExactTexts {
 
   protected final CombinedAttribute attribute;
@@ -31,10 +27,8 @@ public class AppiumAttributeValues extends ExactTexts {
   }
 
   @Override
-  @Nonnull
-  @CheckReturnValue
   public CheckResult check(Driver driver, List<WebElement> elements) {
-    List<String> actualValues = getActualAttributes(driver, elements);
+    List<@Nullable String> actualValues = getActualAttributes(driver, elements);
     if (actualValues.size() != expectedTexts.size()) {
       String message = String.format("List size mismatch (expected: %s, actual: %s)", expectedTexts.size(), actualValues.size());
       return rejected(message, actualValues);
@@ -53,9 +47,9 @@ public class AppiumAttributeValues extends ExactTexts {
     return new CheckResult(ACCEPT, null);
   }
 
-  private List<String> getActualAttributes(Driver driver, List<WebElement> elements) {
+  private List<@Nullable String> getActualAttributes(Driver driver, List<WebElement> elements) {
     return elements.stream()
       .map(element -> attribute.getAttributeValue(driver, element))
-      .collect(toList());
+      .toList();
   }
 }
